# BiomechanicalFeatures

./: .gitignore  README.md  main.py  pyproject.toml
src/biomechfe/: __init__.py  api.py  config.py  features_basic.py  io_adapters.py  preprocessing.py  segmentation.py  windowing.py
src/biomechfe/Featureset/: EMG_MAV_features.py  EMG_STFT_features.py  EMG_ZC_features.py  EMG_integrated_features.py  EMG_statistical_features.py  EMG_wavelength_features.py  IMU_MPSD_features.py  IMU_RT_variability_features.py  IMU_acc_3axis_features.py  IMU_acc_jerk_features.py  IMU_gyr_3axis_features.py  IMU_gyr_rom_features.py  IMU_movement_frequency_features.py
src/tests/: test_emg_rms_constant.py  test_imu_shapes.py  test_smoke.py
