[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "biomech-features"
version = "0.1.0"
description = "Simple, fast IMU+EMG feature extraction"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Malik Qirtas", email = "mqirtas@ucc.ie" }]
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
[project.urls]
"Homepage" = "https://https://github.com/Qirtas/BiomechanicalFeatures"
"Repository" = "https://https://github.com/Qirtas/BiomechanicalFeatures"
"Bug Reports" = "https://github.com/Qirtas/BiomechanicalFeatures/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/biomechfe"]
